--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-ng-packagr": "~0.801.3",
     "@angular/cli": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
@@ -113,11 +114,13 @@
     "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "~1.4.2",
+    "ng-packagr": "^5.1.0",
     "node-sass": "~4.12.0",
     "pre-commit": "~1.2.2",
     "protractor": "~5.4.2",
     "ts-loader": "~4.5.0",
     "ts-node": "~7.0.1",
+    "tsickle": "^0.35.0",
     "tslint": "~5.16.0",
     "typescript": "~3.4.3",
     "udk": "~1.1.6"
