--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,15 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "dcd-ui-angular": [
+        "dist/dcd-ui-angular"
+      ],
+      "dcd-ui-angular/*": [
+        "dist/dcd-ui-angular/*"
+      ]
+    }
   }
 }
