--- a/projects/dcd-ui-angular/package.json
+++ b/projects/dcd-ui-angular/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dcd-ui-angular",
-  "version": "0.0.2",
+  "name": "@datacentricdesign/dcd-ui-angular",
+  "version": "0.0.21",
   "peerDependencies": {
     "@angular/common": "^8.1.3",
     "@angular/core": "^8.1.3",
@@ -11,9 +11,13 @@
     "postinstall": "npm run compile_@swimlane_ngx-charts"
   },
   "dependencies": {
-    "@swimlane/ngx-charts": "^12.0.1",
-    "chart.js": "^2.8.0",
-    "d3-shape": "^1.3.5",
-    "ng2-charts": "^2.3.0"
+    "@angular/animations": "^8.2.0",
+    "@angular/forms": "^8.2.0",
+    "@angular/platform-browser": "^8.2.0",
+    "primeicons": "^2.0.0",
+    "primeng": "^8.0.2"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "~7.5.4"
   }
 }
