--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dcd-designer",
-  "version": "0.0.1",
+  "version": "0.0.1-feature.designer-task",
   "repository": {
     "type": "git",
     "url": "https://github.com/datacentricdesign/dcd-designer"
